<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operationField"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/firstButtonsRaw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                style="@style/NumberButton"
                android:text="@string/Num_7" />

            <Button
                android:id="@+id/btn8"
                style="@style/NumberButton"
                android:text="@string/Num_8" />

            <Button
                android:id="@+id/btn9"
                style="@style/NumberButton"
                android:text="@string/Num_9" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/ActionButton"
                android:text="@string/Divide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondButtonsRaw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="@style/NumberButton"
                android:text="@string/Num_4" />

            <Button
                android:id="@+id/btn5"
                style="@style/NumberButton"
                android:text="@string/Num_5" />

            <Button
                android:id="@+id/btn6"
                style="@style/NumberButton"
                android:text="@string/Num_6" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/ActionButton"
                android:text="@string/Multiply" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdButtonsRaw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="@style/NumberButton"
                android:text="@string/Num_1" />

            <Button
                android:id="@+id/btn2"
                style="@style/NumberButton"
                android:text="@string/Num_2" />

            <Button
                android:id="@+id/btn3"
                style="@style/NumberButton"
                android:text="@string/Num_3" />

            <Button
                android:id="@+id/btnMinus"
                style="@style/ActionButton"
                android:text="@string/Minus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forthButtonsRaw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/NumberButton"
                android:text="@string/Back" />

            <Button
                android:id="@+id/btn0"
                style="@style/NumberButton"
                android:gravity="center"
                android:text="@string/Num_0" />

            <Button
                android:id="@+id/btnDot"
                style="@style/NumberButton"
                android:text="@string/Dot" />


            <Button
                android:id="@+id/btnPlus"
                style="@style/ActionButton"
                android:text="@string/Plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthButtonsRaw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                style="@style/ActionButton"
                android:layout_weight="3"
                android:text="@string/AC"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/EqualButton"
                android:text="@string/Equal" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>